[package]
name = "chug"
version = "1.1.0"
edition = "2021"
keywords = ["eta", "progress"]
description = "Estimate time remaining for a long-running process"
authors = ["bencevans"]
license = "MIT"
repository = "https://github.com/bencevans/chug"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
